--- a/views/index.html
+++ b/views/index.html
@@ -28,9 +28,9 @@
 	<div data---="LAZY directory__null__placeholder:@(Search)"></div>
 	<div data---="LAZY fileuploader"></div>
 	<div data---="LAZY floatinginput"></div>
-	<div data---="LAZY message__null__style:2;button:@(Close)"></div>
 	<div data---="LAZY approve"></div>
 	<div data---="LAZY menu"></div>
+	<div data---="LAZY message__null__style:2;button:@(Close)"></div>
 
 	<div data---="notificationspanel__common.shownotifications__exec:common/notifications_load;autoremove:0;clear:common/notifications_clear">
 		<script type="text/html">
@@ -44,7 +44,9 @@
 		<div data---="LAZY notifybar"></div>
 	</div>
 
-	<div data---="layout2__null__parent:window" class="invisible">
+	<div class="mainmenu exec" data-exec="common/showmenu"><i class="fa fa-align-justify"></i></div>
+
+	<div data---="layout2__null__parent:window;marginxs:34;marginsm:34" class="invisible">
 		<div data-type="left" data-size="230,230,200,0" data-scrollbar="selector:main;margin:0">
 			<main>
 				<div class="stats" data-scope="sysinfo">
@@ -120,7 +122,18 @@
 
 	<script>
 
-		var common = { shownotifications: +('@{PREF.notifications || 0}') > 0, unixsocket: '@{CONF.unixsocket}' === 'true', domain: '@{SuperAdmin.cloud.domain}' };
+		FUNC.generateurl = function() {
+			var str = 'abcdefhiklmnorstuvwxz'.split('');
+			var max = 5;
+			var builder = '';
+			for (var i = 0; i < max; i++) {
+				var index = Math.floor(Math.random() * str.length);
+				builder += str[index];
+			}
+			return common.domain.replace('@', builder + '-');
+		};
+
+		var common = { shownotifications: +('@{PREF.notifications || 0}') > 0, unixsocket: '@{CONF.unixsocket}' === 'true', domain: '@{SuperAdmin.cloud.domain}', dnstoken: '@{SuperAdmin.cloud.dnstoken}' };
 		var user = PARSE('#userdata');
 
 		DEF.dateformat = '@(yyyy-MM-dd)';
@@ -149,7 +162,7 @@
 		});
 
 		ON('@flag hideloading', function() {
-			SETTER('loading/hide', 1000);
+			SETTER('loading/hide', 1200);
 		});
 
 		ON('online', function(is) {
@@ -218,6 +231,17 @@
 
 			exports.notifications_clear = function() {
 				DAPI('notifications_clear', NOOP);
+			};
+
+			exports.hidemenu = function() {
+				if (common.mainmenu)
+					exports.showmenu();
+			};
+
+			exports.showmenu = function() {
+				SETTER('layout2/show', common.mainmenu ? 'main' : 'left');
+				common.mainmenu = !common.mainmenu;
+				EMIT('resize');
 			};
 
 		});
