Added support for Total.js Builder.

--- a/views/index.html
+++ b/views/index.html
@@ -26,6 +26,7 @@
 	<div data---="shortcuts"></div>
 	<div data---="windows__common.windows"></div>
 
+	<div data---="LAZY builder"></div>
 	<div data---="LAZY directory__null__placeholder:@(Search)"></div>
 	<div data---="LAZY fileuploader"></div>
 	<div data---="LAZY floatinginput"></div>
