--- a/views/index.html
+++ b/views/index.html
@@ -31,7 +31,7 @@
 	<div data---="LAZY fileuploader"></div>
 	<div data---="LAZY floatinginput"></div>
 	<div data---="LAZY approve"></div>
-	<div data---="LAZY menu"></div>
+	<div data---="LAZY menu__null__style:2"></div>
 	<div data---="LAZY message__null__style:2;button:@(Close)"></div>
 
 	<div data---="notificationspanel__common.shownotifications__exec:common/notifications_load;autoremove:0;clear:common/notifications_clear">
