Fixed login form.

--- a/views/login.html
+++ b/views/login.html
@@ -63,7 +63,7 @@
 	<div class="centered">
 		<div class="panel">
 			<h1><i class="fa fa-lock"></i>@{'%name'}</h1>
-			<div class="padding">
+			<div style="padding:20px">
 
 				@{if PREF.credentials}
 					<div class="alert m">
